compiler/output1/STParser.java
// $ANTLR 3.3.1-SNAPSHOT Feb 01, 2011 19:19:01 /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g 2011-02-03 08:07:03

package org.stringtemplate.v4.compiler;
import org.stringtemplate.v4.misc.ErrorManager;
import org.stringtemplate.v4.misc.ErrorType;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

/** Build an AST from a single StringTemplate template */
public class STParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IF", "ELSE", "ELSEIF", "ENDIF", "SUPER", "SEMI", "BANG", "ELLIPSIS", "EQUALS", "COLON", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", "DOT", "LCURLY", "RCURLY", "TEXT", "LDELIM", "RDELIM", "ID", "STRING", "WS", "PIPE", "OR", "AND", "INDENT", "NEWLINE", "AT", "END", "EXPR", "OPTIONS", "PROP", "PROP_IND", "INCLUDE", "INCLUDE_IND", "EXEC_FUNC", "INCLUDE_SUPER", "INCLUDE_SUPER_REGION", "INCLUDE_REGION", "TO_STR", "LIST", "MAP", "ZIP", "SUBTEMPLATE", "ARGS", "ELEMENTS", "REGION", "NULL"
    };
    public static final int EOF=-1;
    public static final int RBRACK=17;
    public static final int LBRACK=16;
    public static final int ELSE=5;
    public static final int ELLIPSIS=11;
    public static final int LCURLY=20;
    public static final int BANG=10;
    public static final int EQUALS=12;
    public static final int TEXT=22;
    public static final int ID=25;
    public static final int SEMI=9;
    public static final int LPAREN=14;
    public static final int IF=4;
    public static final int ELSEIF=6;
    public static final int COLON=13;
    public static final int RPAREN=15;
    public static final int WS=27;
    public static final int COMMA=18;
    public static final int RCURLY=21;
    public static final int ENDIF=7;
    public static final int RDELIM=24;
    public static final int SUPER=8;
    public static final int DOT=19;
    public static final int LDELIM=23;
    public static final int STRING=26;
    public static final int PIPE=28;
    public static final int OR=29;
    public static final int AND=30;
    public static final int INDENT=31;
    public static final int NEWLINE=32;
    public static final int AT=33;
    public static final int END=34;
    public static final int EXPR=35;
    public static final int OPTIONS=36;
    public static final int PROP=37;
    public static final int PROP_IND=38;
    public static final int INCLUDE=39;
    public static final int INCLUDE_IND=40;
    public static final int EXEC_FUNC=41;
    public static final int INCLUDE_SUPER=42;
    public static final int INCLUDE_SUPER_REGION=43;
    public static final int INCLUDE_REGION=44;
    public static final int TO_STR=45;
    public static final int LIST=46;
    public static final int MAP=47;
    public static final int ZIP=48;
    public static final int SUBTEMPLATE=49;
    public static final int ARGS=50;
    public static final int ELEMENTS=51;
    public static final int REGION=52;
    public static final int NULL=53;

    // delegates
    // delegators


        public STParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public STParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return STParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g"; }


    ErrorManager errMgr;
    Token templateToken;
    public STParser(TokenStream input, ErrorManager errMgr, Token templateToken) {
    	this(input);
    	this.errMgr = errMgr;
    	this.templateToken = templateToken;
    }
    protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow)
    	throws RecognitionException
    {
    	throw new MismatchedTokenException(ttype, input);
    }


    public static class templateAndEOF_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "templateAndEOF"
    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:70:1: templateAndEOF : template EOF -> ( template )? ;
    public final STParser.templateAndEOF_return templateAndEOF() throws RecognitionException {
        STParser.templateAndEOF_return retval = new STParser.templateAndEOF_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CommonToken EOF2=null;
        STParser.template_return template1 = null;


        CommonTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_template=new RewriteRuleSubtreeStream(adaptor,"rule template");
        try {
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:70:16: ( template EOF -> ( template )? )
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:70:18: template EOF
            {
            pushFollow(FOLLOW_template_in_templateAndEOF130);
            template1=template();

            state._fsp--;

            stream_template.add(template1.getTree());
            EOF2=(CommonToken)match(input,EOF,FOLLOW_EOF_in_templateAndEOF132);  
            stream_EOF.add(EOF2);



            // AST REWRITE
            // elements: template
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 70:31: -> ( template )?
            {
                // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:70:34: ( template )?
                if ( stream_template.hasNext() ) {
                    adaptor.addChild(root_0, stream_template.nextTree());

                }
                stream_template.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return retval;
    }
    // $ANTLR end "templateAndEOF"

    public static class template_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "template"
    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:72:1: template : ( element )* ;
    public final STParser.template_return template() throws RecognitionException {
        STParser.template_return retval = new STParser.template_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        STParser.element_return element3 = null;



        try {
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:72:10: ( ( element )* )
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:72:12: ( element )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:72:12: ( element )*
            loop1:
            do {
                int alt1=2;
                switch ( input.LA(1) ) {
                case LDELIM:
                    {
                    int LA1_2 = input.LA(2);

                    if ( (LA1_2==IF||LA1_2==SUPER||LA1_2==LPAREN||LA1_2==LBRACK||LA1_2==LCURLY||(LA1_2>=ID && LA1_2<=STRING)||LA1_2==AT) ) {
                        alt1=1;
                    }


                    }
                    break;
                case INDENT:
                    {
                    int LA1_3 = input.LA(2);

                    if ( (LA1_3==LDELIM) ) {
                        int LA1_5 = input.LA(3);

                        if ( (LA1_5==IF||LA1_5==SUPER||LA1_5==LPAREN||LA1_5==LBRACK||LA1_5==LCURLY||(LA1_5>=ID && LA1_5<=STRING)||LA1_5==AT) ) {
                            alt1=1;
                        }


                    }
                    else if ( (LA1_3==TEXT||(LA1_3>=INDENT && LA1_3<=NEWLINE)) ) {
                        alt1=1;
                    }


                    }
                    break;
                case TEXT:
                case NEWLINE:
                    {
                    alt1=1;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:72:12: element
            	    {
            	    pushFollow(FOLLOW_element_in_template146);
            	    element3=element();

            	    state._fsp--;

            	    adaptor.addChild(root_0, element3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return retval;
    }
    // $ANTLR end "template"

    public static class element_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "element"
    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:74:1: element : ( INDENT element -> ^( INDENT element ) | ifstat | exprTag | text | region | NEWLINE );
    public final STParser.element_return element() throws RecognitionException {
        STParser.element_return retval = new STParser.element_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CommonToken INDENT4=null;
        CommonToken NEWLINE10=null;
        STParser.element_return element5 = null;

        STParser.ifstat_return ifstat6 = null;

        STParser.exprTag_return exprTag7 = null;

        STParser.text_return text8 = null;

        STParser.region_return region9 = null;


        CommonTree INDENT4_tree=null;
        CommonTree NEWLINE10_tree=null;
        RewriteRuleTokenStream stream_INDENT=new RewriteRuleTokenStream(adaptor,"token INDENT");
        RewriteRuleSubtreeStream stream_element=new RewriteRuleSubtreeStream(adaptor,"rule element");
        try {
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:75:2: ( INDENT element -> ^( INDENT element ) | ifstat | exprTag | text | region | NEWLINE )
            int alt2=6;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:75:4: INDENT element
                    {
                    INDENT4=(CommonToken)match(input,INDENT,FOLLOW_INDENT_in_element157);  
                    stream_INDENT.add(INDENT4);

                    pushFollow(FOLLOW_element_in_element159);
                    element5=element();

                    state._fsp--;

                    stream_element.add(element5.getTree());


                    // AST REWRITE
                    // elements: INDENT, element
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 75:19: -> ^( INDENT element )
                    {
                        // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:75:22: ^( INDENT element )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_INDENT.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_element.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:76:4: ifstat
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_ifstat_in_element172);
                    ifstat6=ifstat();

                    state._fsp--;

                    adaptor.addChild(root_0, ifstat6.getTree());

                    }
                    break;
                case 3 :
                    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:77:4: exprTag
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_exprTag_in_element177);
                    exprTag7=exprTag();

                    state._fsp--;

                    adaptor.addChild(root_0, exprTag7.getTree());

                    }
                    break;
                case 4 :
                    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:78:4: text
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_text_in_element182);
                    text8=text();

                    state._fsp--;

                    adaptor.addChild(root_0, text8.getTree());

                    }
                    break;
                case 5 :
                    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:79:4: region
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_region_in_element187);
                    region9=region();

                    state._fsp--;

                    adaptor.addChild(root_0, region9.getTree());

                    }
                    break;
                case 6 :
                    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:80:4: NEWLINE
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    NEWLINE10=(CommonToken)match(input,NEWLINE,FOLLOW_NEWLINE_in_element192); 
                    NEWLINE10_tree = (CommonTree)adaptor.create(NEWLINE10);
                    adaptor.addChild(root_0, NEWLINE10_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return retval;
    }
    // $ANTLR end "element"

    public static class text_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "text"
    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:83:1: text : TEXT ;
    public final STParser.text_return text() throws RecognitionException {
        STParser.text_return retval = new STParser.text_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CommonToken TEXT11=null;

        CommonTree TEXT11_tree=null;

        try {
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:83:6: ( TEXT )
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:83:8: TEXT
            {
            root_0 = (CommonTree)adaptor.nil();

            TEXT11=(CommonToken)match(input,TEXT,FOLLOW_TEXT_in_text202); 
            TEXT11_tree = (CommonTree)adaptor.create(TEXT11);
            adaptor.addChild(root_0, TEXT11_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

           catch (RecognitionException re) { throw re; }
        finally {
        }
        return retval;
    }
    // $ANTLR end "text"

    public static class exprTag_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "exprTag"
    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:85:1: exprTag : LDELIM expr ( ';' exprOptions )? RDELIM -> ^( EXPR[$LDELIM,\"EXPR\"] expr ( exprOptions )? ) ;
    public final STParser.exprTag_return exprTag() throws RecognitionException {
        STParser.exprTag_return retval = new STParser.exprTag_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CommonToken LDELIM12=null;
        CommonToken char_literal14=null;
        CommonToken RDELIM16=null;
        STParser.expr_return expr13 = null;

        STParser.exprOptions_return exprOptions15 = null;


        CommonTree LDELIM12_tree=null;
        CommonTree char_literal14_tree=null;
        CommonTree RDELIM16_tree=null;
        RewriteRuleTokenStream stream_RDELIM=new RewriteRuleTokenStream(adaptor,"token RDELIM");
        RewriteRuleTokenStream stream_LDELIM=new RewriteRuleTokenStream(adaptor,"token LDELIM");
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleSubtreeStream stream_exprOptions=new RewriteRuleSubtreeStream(adaptor,"rule exprOptions");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:86:2: ( LDELIM expr ( ';' exprOptions )? RDELIM -> ^( EXPR[$LDELIM,\"EXPR\"] expr ( exprOptions )? ) )
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:86:4: LDELIM expr ( ';' exprOptions )? RDELIM
            {
            LDELIM12=(CommonToken)match(input,LDELIM,FOLLOW_LDELIM_in_exprTag212);  
            stream_LDELIM.add(LDELIM12);

            pushFollow(FOLLOW_expr_in_exprTag214);
            expr13=expr();

            state._fsp--;

            stream_expr.add(expr13.getTree());
            // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:86:16: ( ';' exprOptions )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==SEMI) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:86:18: ';' exprOptions
                    {
                    char_literal14=(CommonToken)match(input,SEMI,FOLLOW_SEMI_in_exprTag218);  
                    stream_SEMI.add(char_literal14);

                    pushFollow(FOLLOW_exprOptions_in_exprTag220);
                    exprOptions15=exprOptions();

                    state._fsp--;

                    stream_exprOptions.add(exprOptions15.getTree());

                    }
                    break;

            }

            RDELIM16=(CommonToken)match(input,RDELIM,FOLLOW_RDELIM_in_exprTag225);  
            stream_RDELIM.add(RDELIM16);



            // AST REWRITE
            // elements: expr, exprOptions
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 87:3: -> ^( EXPR[$LDELIM,\"EXPR\"] expr ( exprOptions )? )
            {
                // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:87:6: ^( EXPR[$LDELIM,\"EXPR\"] expr ( exprOptions )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(EXPR, LDELIM12, "EXPR"), root_1);

                adaptor.addChild(root_1, stream_expr.nextTree());
                // /Users/acondit/source/antlr3/acondit_localhost/code/ST4/objc/main/compiler/STParser.g:87:34: ( exprOptions )?
                if ( stream_exprOptions.hasNext() ) {
                    adaptor.addChild(root_1, stream_exprOptions.nextTree());

                }
                stream_exprOptions.reset();

                adaptor.addChild(root_0, root_1);
                }
